--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -10,38 +10,39 @@
 /**
  * The Basics
  */
-body {
-  margin: 0;
-  padding: 0; }
-
 html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-  font-size: 18px;
+  font-size: 1rem;
   line-height: 1.5;
   box-sizing: border-box; }
   @media (min-width: 50rem) {
     html {
-      font-size: 20px; } }
+      font-size: 1.25rem; } }
 
 *, *:before, *:after {
   box-sizing: inherit; }
 
 body {
+  margin: 0;
+  padding: 0;
   color: #515151;
   background-color: #fff;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   /* Better Font Rendering =========== */
+  text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
 a {
-  color: #225378;
+  color: #FF0000;
   text-decoration: none;
-  transition: all 0.2s ease-in-out; }
+  transition: all 0.3s ease-in-out; }
   a:hover, a:focus {
+    outline-width: 0;
     text-decoration: none;
-    border-bottom: 1px dotted #225378; }
+    border-bottom: 1px dotted;
+    border-bottom-color: inherit; }
   a strong {
     color: inherit; }
 
@@ -118,25 +119,23 @@ th {
  */
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: .5rem;
-  font-weight: 500;
-  line-height: 1.25;
-  color: #313131;
-  text-rendering: optimizeLegibility; }
+  font-weight: 300;
+  letter-spacing: -.016em;
+  line-height: 1.25; }
 
 h1 {
-  font-size: 2rem;
-  font-weight: 300; }
+  font-size: 2rem; }
 
 h2 {
-  margin-top: 1rem;
-  font-size: 1.5rem; }
+  font-size: 1.75rem; }
 
 h3 {
-  margin-top: 1.5rem;
+  font-size: 1.5rem; }
+
+h4 {
   font-size: 1.25rem; }
 
-h4, h5, h6 {
-  margin-top: 1rem;
+h5, h6 {
   font-size: 1rem; }
 
 p {
@@ -149,6 +148,9 @@ strong {
 ul, ol, dl {
   margin-top: 0;
   margin-bottom: 1rem; }
+
+li {
+  line-height: 1.2rem; }
 
 dt {
   font-weight: bold; }
@@ -254,11 +256,14 @@ code {
   .page li + li,
   .post li + li {
     margin-top: .25rem; }
+  .page p > a,
+  .post p > a {
+    font-weight: 400; }
 
 .page-title,
 .post-title,
 .post-title a {
-  color: #303030; }
+  color: #515151; }
 
 .page-title,
 .post-title {
@@ -292,7 +297,7 @@ code {
 
 .pagination > li {
   display: inline;
-  font-size: 1.5rem; }
+  font-size: 1.25rem; }
 
 .pagination > li:first-child > a {
   position: relative;
@@ -379,7 +384,7 @@ code {
 
 /* About section */
 .sidebar-about h1 {
-  color: #fff;
+  color: #FF0000;
   margin-top: 0;
   font-size: 2.5rem;
   font-weight: 200; }
@@ -461,7 +466,7 @@ article > h2 {
   left: .5rem;
   top: .7rem;
   font-size: .8rem;
-  color: #ccc;
+  color: #767676;
   display: inline-block;
   text-transform: uppercase; }
 
