--- a/scss/base.scss
+++ b/scss/base.scss
@@ -32,7 +32,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-synthesis: none;
-  // -moz-font-feature-settings: 'liga', 'kern';
+  -moz-font-feature-settings: 'liga', 'kern';
 }
 
 // No `:visited` state is required by default (browsers will use `a`)
